# root/src/program/child/ffmpeg/meson.build

src_files += files('ProbeResult.cpp')
src_files += files('ProbeResultFormat.cpp')
src_files += files('ProbeResultFormatTags.cpp')
src_files += files('ProbeResultStream.cpp')
src_files += files('ProbeResultStreamAudio.cpp')
src_files += files('ProbeResultStreamDisposition.cpp')
src_files += files('ProbeResultStreamSubtitle.cpp')
src_files += files('ProbeResultStreamTags.cpp')
src_files += files('ProbeResultStreamVideo.cpp')
