# root/src/program/child/media/meson.build

src_files += files('Media.cpp')
src_files += files('MediaDefinedFormat.cpp')
src_files += files('MediaFile.cpp')
src_files += files('MediaFormat.cpp')
src_files += files('MediaProcessConversion.cpp')
src_files += files('MediaProcessStatistics.cpp')
src_files += files('MediaProcessValidate.cpp')
src_files += files('MediaVideoProperties.cpp')
src_files += files('MediaWorkingProperties.cpp')
