# root/src/program/settings/enums/meson.build

src_files += files('Activity.cpp')
src_files += files('Decoders.cpp')
src_files += files('Encoders.cpp')
src_files += files('GPUProviders.cpp')
src_files += files('HWAccelerators.cpp')
src_files += files('LoggingOptions.cpp')
src_files += files('MediaFormats.cpp')
src_files += files('Platform.cpp')
src_files += files('Tunes.cpp')
